Replaced dummy subscription key with variable for more clarity

--- a/framework/.env.example
+++ b/framework/.env.example
@@ -1,2 +1,2 @@
-LUIS_QUERY_URL=https://westeurope.api.cognitive.microsoft.com/luis/v2.0/apps/{APP_ID}?verbose=true&timezoneOffset=0&subscription-key=85acf90ae08245fea3bfe6b50238c1b6&staging=true&q=
-BING_SPELL_CHECK_SUBSCRIPTION_KEY=
+LUIS_QUERY_URL=https://westeurope.api.cognitive.microsoft.com/luis/v2.0/apps/{APP_ID}?verbose=true&timezoneOffset=0&subscription-key={SUBSCRIPTION_KEY}&staging=true&q=
+BING_SPELL_CHECK_SUBSCRIPTION_KEY={SUBSCRIPTION_KEY_SPELLCHECK}
