--- a/luismodel/.eslintrc.json
+++ b/luismodel/.eslintrc.json
@@ -18,6 +18,7 @@
       "parser": "@typescript-eslint/parser",
       "extends": ["plugin:@typescript-eslint/recommended"],
       "rules": {
+        "no-constant-condition": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-use-before-define": "off",
         "node/no-unsupported-features/es-syntax": "off",
