Trigger CI manually via dispatch API

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
 name: LUIS Intent Recognition System Verification CI
 
 on:
+  repository_dispatch:
+    types: trigger-ci
   push:
     branches:
       - master
